--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.6",
     "web-vitals": "^2.1.4"
   },
